--- a/projects/editor/src/lib/components/property/property.component.html
+++ b/projects/editor/src/lib/components/property/property.component.html
@@ -1,6 +1,7 @@
 <ng-container [ngSwitch]="property.type">
     <lib-array-property 
         *ngSwitchCase="propertyType.ARRAY"
+        class="tree-item"
         [treeLevel]="treeLevel"
         [target]="isRoot ? target : target[property.key]"
         [property]="propertyService.getAsArrayProperty(property)"
@@ -12,6 +13,7 @@
 
     <lib-object-property
         *ngSwitchCase="propertyType.OBJECT"
+        class="tree-item"
         [treeLevel]="treeLevel"
         [target]="isRoot ? target : target[property.key]"
         [property]="propertyService.getAsObjectProperty(property)"
@@ -24,6 +26,7 @@
 
     <lib-boolean-property
         *ngSwitchCase="propertyType.BOOLEAN"
+        class="tree-item"
         [treeLevel]="treeLevel"
         [property]="property"
         [target]="target"
@@ -35,6 +38,7 @@
 
     <lib-chip-list-property
         *ngSwitchCase="propertyType.CHIP_LIST"
+        class="tree-item"
         [treeLevel]="treeLevel"
         [property]="propertyService.getAsChiplistProperty(property)"
         [target]="target"
@@ -52,6 +56,7 @@
     </ng-container>
     <ng-template #inputProperty>
         <lib-input-property
+            class="tree-item"
             [treeLevel]="treeLevel"
             [property]="propertyService.getAsInputProperty(property)"
             [target]="target"
