--- a/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.scss
@@ -1,18 +1,35 @@
 :host {
-	flex-grow: 1;
-	height: 0; // Ensures all sidebar sections are equal height regardless of content
-	display: flex;
-	flex-direction: column;
+	display: block;
+    transition: height 0.2s ease-out;
+    overflow: hidden;
 }
 
-:host.collapsed {
-	flex-grow: 0;
-	height: auto;
+.sidebar-divider {
+	position: relative;
+    height: 100%;
+    height: 4px;
+    flex-shrink: 0;
+    background-color: rgba(0,0,0,0.12);
+	cursor: ns-resize;
+}
+
+.sidebar-divider::after {
+	position: absolute;
+	content: '';
+	height: 4px;
+	width: 100%;
+	left: 0;
+}
+
+.sidebar-divider:hover::after {
+	height: 16px;
+	top: -6px;
+    background-color: rgba(0,0,0,0.2);
 }
 
 .sidebar-header {
-	flex-shrink: 0;
-    height: 48px;
+	// flex-shrink: 0;
+    height: var(--header-height);
     display: flex;
 	justify-content: space-between;
     align-items: center;
@@ -28,17 +45,12 @@
 	align-items: center;
 }
 
-.sidebar-content-wrapper {
+.sidebar-section-content {
 	display: block;
-	flex-grow: 1;
-	overflow: auto;
-    border-bottom: 1px solid rgba(0,0,0,.12);
-}
-
-.sidebar-content {
-	display: inline-flex;
-    flex-direction: column;
-	min-width: 100%;
+    overflow: auto;
+	// display: inline-flex;
+    // flex-direction: column;
+	// min-width: 100%;
     box-sizing: border-box;
     padding: 8px;
 }
