--- a/src/assets/custom-styles.css
+++ b/src/assets/custom-styles.css
@@ -13,8 +13,7 @@
 .flex-shrink-0 {flex-shrink: 0;}
 
 /* Grid */
-/* Grid */
-.grid {display: grid; position: relative;}
+.grid {display: grid;}
 .grid-cols-1 {grid-template-columns: repeat(1, minmax(0, 1fr));}
 .grid-cols-2 {grid-template-columns: repeat(2, minmax(0, 1fr));}
 .grid-cols-3 {grid-template-columns: repeat(3, minmax(0, 1fr));}
