Revert "feat(drag-drop): partially remove drag drop (#54)"
This reverts commit 069344199309b36436e574b71b51949d65254bc1.

--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -1,8 +1,17 @@
 <lib-sidebar [position]="typeOfSideBarPosition.LEFT">
 	<lib-sidebar-section
+		[sectionTitle]="'Add Field'">
+        <lib-field-category-list
+            *ngFor="let category of editorService.fieldCategories; let first = first"
+            [category]="category"
+            [formId]="form.id"
+            [isExpanded]="first">
+        </lib-field-category-list>
+	</lib-sidebar-section>
+    <lib-sidebar-section
         [sectionTitle]="'Fields'"
-        >
-		<lib-field-tree-item 
+        >		
+        <lib-field-tree-item 
 			*ngFor="let field of form.fields"
 			[field]="field"
 			[isExpanded]="true">
