feat(drag-drop): hide placeholder

--- a/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
+++ b/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
@@ -2,8 +2,7 @@
     [classList]="dropListClasses"
     [ngClass]="{ 'edit-mode': editorService.isEditMode }"
     cdkDropList
-    [cdkDropListOrientation]="dropListOrientation"
-    [cdkDropListSortingDisabled]="isSortingDisabled"
+    [cdkDropListSortingDisabled]="true"
     [cdkDropListEnterPredicate]="canEnter"
     [cdkDropListConnectedTo]="connectedTo"
     [cdkDropListData]="field"
