--- a/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
+++ b/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
@@ -4,25 +4,23 @@
         <header class="section-header">
             <h3 class="section-header-text">Properties</h3>
         </header>
-        <div class="section-content">
-            <mat-tab-group mat-stretch-tabs>
-                <mat-tab label="General">
-                    <lib-property
-                        [target]="editField"
-                        [property]="property"
-                        [isSimplified]="true"
-                        [isRoot]="true"
-                        (valueChanged)="onPreviewChanged()">
-                    </lib-property>
-                </mat-tab>
-                <mat-tab label="Styling">
-                    <lib-edit-field-styles
-                        [editField]="editField"
-                        (valueChanged)="onPreviewChanged()">
-                    </lib-edit-field-styles>
-                </mat-tab>
-            </mat-tab-group>
-        </div>
+        <mat-tab-group class="section-content" mat-stretch-tabs>
+            <mat-tab label="General">
+                <lib-property
+                    [target]="editField"
+                    [property]="property"
+                    [isSimplified]="true"
+                    [isRoot]="true"
+                    (valueChanged)="onPreviewChanged()">
+                </lib-property>
+            </mat-tab>
+            <mat-tab label="Styling">
+                <lib-edit-field-styles
+                    [editField]="editField"
+                    (valueChanged)="onPreviewChanged()">
+                </lib-edit-field-styles>
+            </mat-tab>
+        </mat-tab-group>
     </section>
 
     <section class="preview-section">
