--- a/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.html
+++ b/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.html
@@ -1,6 +1,6 @@
 <div class="tree-item-header" *ngIf="!isSimplified else simplifiedView">
 	<span class="tree-item-header-content-left">
-		<button mat-icon-button [ngStyle]="{'margin-right.px': treeLevelPadding}" [matMenuTriggerFor]="optionsMenu" [disabled]="!hasOptions">
+		<button mat-icon-button [matMenuTriggerFor]="optionsMenu" [disabled]="!hasOptions">
 			<mat-icon>more_vert</mat-icon>
 		</button>
 			
@@ -12,7 +12,7 @@
 		</mat-menu>
 	
 		<!-- use a disabled button to provide padding for non expandable field -->
-		<button mat-icon-button [disabled]="true"></button>
+		<button [style.margin-left.px]="treeLevelPadding" mat-icon-button [disabled]="true"></button>
 		<span #key class="keyField" [ngClass]="{ 'editable': !!property.isKeyEditable }" [contentEditable]="!!property.isKeyEditable"></span>
 		<span>:</span>
 	</span>
