--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -19,12 +19,21 @@
 	</lib-sidebar-section>
 </lib-sidebar>
 
-<lib-form-view 
-    class="form-view"
-    [form]="form"
-    [formChanged$]="formChanged$"
-    (modelChanged)="onModelChanged()">
-</lib-form-view>
+<div class="main">
+    <lib-form-toolbar [(selectedDisplay)]="selectedFormDisplay"></lib-form-toolbar>
+    <mat-tab-group [selectedIndex]="formDisplayTabIndex">
+        <mat-tab>
+            <lib-form-view
+                [form]="form"
+                [formChanged$]="formChanged$"
+                (modelChanged)="onModelChanged()">
+            </lib-form-view>
+        </mat-tab>
+        <mat-tab>
+            <pre><code>{{ jsonFields }}</code></pre>
+        </mat-tab>
+    </mat-tab-group>
+</div>
 
 <lib-sidebar class="right" [position]="typeOfSideBarPosition.RIGHT">
 	<lib-sidebar-section
