--- a/projects/editor/src/lib/components/form/form.component.scss
+++ b/projects/editor/src/lib/components/form/form.component.scss
@@ -1,12 +1,30 @@
 :host {
     display: flex;
     height: 100%;
+
+    ::ng-deep {
+        mat-tab-group mat-tab-header {
+            display: none;
+        }
+
+        .mat-tab-body-content {
+            padding: 16px;
+            box-sizing: border-box;
+        }
+    }
 }
 
-.form-view {
+.main {
     flex-grow: 1;
-    padding: 16px;
-    overflow: auto;
+    height: 100%;
+}
+
+lib-form-toolbar {
+    height: var(--header-height);
+}
+
+mat-tab-group {
+    height: calc(100% - var(--header-height));
 }
 
 lib-sidebar {
