feat(action-buttons): add reset model button

--- a/projects/editor/src/lib/components/form/form-toolbar/form-toolbar.component.html
+++ b/projects/editor/src/lib/components/form/form-toolbar/form-toolbar.component.html
@@ -8,3 +8,9 @@
         <span>JSON</span>
     </mat-button-toggle>
 </mat-button-toggle-group>
+
+<div class="action-buttons">
+    <button mat-icon-button matTooltip="Reset Form" (click)="resetModel.emit()">
+        <mat-icon>restart_alt</mat-icon>
+    </button>
+</div>
