--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -20,12 +20,16 @@
 </lib-sidebar>
 
 <div class="main">
-    <lib-form-toolbar [(selectedDisplay)]="selectedFormDisplay"></lib-form-toolbar>
+    <lib-form-toolbar
+        [(selectedDisplay)]="selectedFormDisplay"
+        (resetModel)="onResetModel()">
+    </lib-form-toolbar>
     <mat-tab-group [selectedIndex]="formDisplayTabIndex">
         <mat-tab>
             <lib-form-view
                 [form]="form"
                 [formChanged$]="formChanged$"
+                [resetModel$]="resetModel$"
                 (modelChanged)="onModelChanged()">
             </lib-form-view>
         </mat-tab>
