feat(property): modify target outside of property

--- a/projects/editor/src/lib/components/edit-field-dialog/edit-field-styles/edit-field-styles.component.html
+++ b/projects/editor/src/lib/components/edit-field-dialog/edit-field-styles/edit-field-styles.component.html
@@ -13,9 +13,10 @@
             <lib-property
                 [target]="editField"
                 [property]="getProperty()"
+                [path]="'className'"
                 [isSimplified]="true"
                 [isRoot]="true"
-                (valueChanged)="valueChanged.emit()">
+                (valueChanged)="valueChanged.emit($event)">
             </lib-property>
         </lib-breakpoint>
     
@@ -32,9 +33,10 @@
             <lib-property
                 [target]="editField"
                 [property]="getProperty(breakpointType)"
+                [path]="'className'"
                 [isSimplified]="true"
                 [isRoot]="true"
-                (valueChanged)="valueChanged.emit()">
+                (valueChanged)="valueChanged.emit($event)">
             </lib-property>
         </lib-breakpoint>
     </div>
@@ -121,9 +123,10 @@
             <lib-property
                 [target]="editField"
                 [property]="getChildrenProperty()"
+                [path]="'fieldGroupClassName'"
                 [isSimplified]="true"
                 [isRoot]="true"
-                (valueChanged)="valueChanged.emit()">
+                (valueChanged)="valueChanged.emit($event)">
             </lib-property>
         </lib-breakpoint>
     
@@ -147,9 +150,10 @@
             <lib-property
                 [target]="editField"
                 [property]="getChildrenProperty(breakpointType)"
+                [path]="'fieldGroupClassName'"
                 [isSimplified]="true"
                 [isRoot]="true"
-                (valueChanged)="valueChanged.emit()">
+                (valueChanged)="valueChanged.emit($event)">
             </lib-property>
         </lib-breakpoint>
     </div>
