--- a/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
+++ b/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
@@ -11,13 +11,13 @@
                     [property]="property"
                     [isSimplified]="true"
                     [isRoot]="true"
-                    (valueChanged)="onPreviewChanged()">
+                    (valueChanged)="onPropertyChanged($event)">
                 </lib-property>
             </mat-tab>
             <mat-tab label="Styling">
                 <lib-edit-field-styles
                     [editField]="editField"
-                    (valueChanged)="onPreviewChanged()">
+                    (valueChanged)="onPropertyChanged($event)">
                 </lib-edit-field-styles>
             </mat-tab>
         </mat-tab-group>
