--- a/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.scss
@@ -28,13 +28,12 @@
 }
 
 .sidebar-header {
-	// flex-shrink: 0;
     height: var(--header-height);
     display: flex;
-	justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
+	column-gap: 8px;
     padding: 0 12px;
+    box-sizing: border-box;
     border-bottom: 1px solid rgba(0,0,0,.12);
     user-select: none;
 }
@@ -48,9 +47,6 @@
 .sidebar-section-content {
 	display: block;
     overflow: auto;
-	// display: inline-flex;
-    // flex-direction: column;
-	// min-width: 100%;
     box-sizing: border-box;
     padding: 8px;
 }
