--- a/projects/editor/src/lib/components/form/form-toolbar/form-toolbar.component.scss
+++ b/projects/editor/src/lib/components/form/form-toolbar/form-toolbar.component.scss
@@ -18,5 +18,10 @@
 
 .action-buttons {
     display: inline-flex;
-    column-gap: 8px;
+    align-items: center;
+    column-gap: 16px;
+}
+
+.toggle-sidebars-icon {
+    transform: rotate(90deg);
 }
